--- a/index.html
+++ b/index.html
@@ -64,18 +64,33 @@
 
     <!-- Action Order -->
     <div class="actionorder">
-        <div class="turn">
-                <img src="Images/Character_Caelus_29_Icon.webp" class="characterimgsm unselectable">
+        <div class="turn unselectable">
+                <img src="Images/Character_Feixiao_Icon.webp" class="characterimgsm">
                 <div class="turntitle">
-                    <p class="turncharactername">Caelus</p>     
+                    <p class="turncharactername">Feixiao</p>     
                 </div>
 
                 <div class="turnavslot">
                     <p class="turnav">149</p>
                 </div>
 
-                <div class="actiontypeslot">
-                    <p class="actiontype">SKILL</p>
+                <div class="turnactiontypeslot">
+                    <p class="turnactiontype">SKILL</p>
+                </div>
+
+                <div class="turnactivebundle">
+                    <div class="turnactiveslot stackable">
+                        <img src="Images/Feixiao/Ability_Terrasplit.webp" class="turnactiveimg" id="turnactiveimg1">
+                        <p class="turnstackammount">12</p>
+                    </div>
+                    <div class="turnactiveslot stackable">
+                        <img src="Images/Robin/Ability_Pinions_Aria.webp" class="turnactiveimg" id="turnactiveimg2">
+                        <p class="turnstackammount">12</p>
+                    </div>
+                    <div class="turnactiveslot">
+                        <img src="Images/Robin/Ability_Vox_Harmonique_Opus_Cosmique.webp" class="turnactiveimg" id="turnactiveimg2">
+                        <p class="turnstackammount" style="display: none;">12</p>
+                    </div>
                 </div>
         </div>
     </div>
